feat: '@' path 및 스타일 고정

--- a/client/src/app/globals.css
+++ b/client/src/app/globals.css
@@ -21,6 +21,7 @@
 
 body {
   background: var(--background);
+  height: 100dvh;
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
 }
