--- a/client/src/app/globals.css
+++ b/client/src/app/globals.css
@@ -3,6 +3,7 @@
 :root {
   --background: #ffffff;
   --foreground: #171717;
+  --jihyegra: linear-gradient(to right, #b73abb, #d0579a, #e46e80);
 }
 
 @theme inline {
@@ -24,4 +25,8 @@ body {
   height: 100dvh;
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
+}
+
+.btn-jihyegra {
+  background-image: var(--jihyegra);
 }
