--- a/client/src/app/globals.css
+++ b/client/src/app/globals.css
@@ -1,4 +1,5 @@
 @import 'tailwindcss';
+@import '../assets/styles/fonts.css';
 
 :root {
   --background: #ffffff;
@@ -27,6 +28,6 @@ body {
   font-family: Arial, Helvetica, sans-serif;
 }
 
-.btn-jihyegra {
+.bg-jihyegra {
   background-image: var(--jihyegra);
 }
