--- a/client/src/app/globals.css
+++ b/client/src/app/globals.css
@@ -28,6 +28,20 @@ body {
   font-family: Arial, Helvetica, sans-serif;
 }
 
+*::-webkit-scrollbar {
+  width: 4px;
+}
+
+*::-webkit-scrollbar-thumb {
+  background: #777777; /* 스크롤바 색상 */
+  border-radius: 10px; /* 스크롤바 둥근 테두리 */
+}
+
+*::-webkit-scrollbar-track {
+  background: #444444; /*스크롤바 뒷 배경 색상*/
+  border-radius: 10px;
+}
+
 .bg-jihyegra {
   background-image: var(--jihyegra);
 }
