--- a/client/src/app/globals.css
+++ b/client/src/app/globals.css
@@ -23,9 +23,9 @@
 }
 
 body {
-  background: var(--background);
+  background: #000000;
   height: 100dvh;
-  color: var(--foreground);
+  color: #ffffff;
   font-family: Arial, Helvetica, sans-serif;
 }
 
